...

    // Return the timestamp in milliseconds
    return calendar.timeInMillis
}

internal object TestTags {
    const val NOTE_TITLE_INPUT = "note_title_input"
    const val NOTE_TEXT_INPUT = "note_text_input"
    const val SAVE_BUTTON = "save_button"
    const val NOTE_COLOR_PICKER = "note_color_picker"
    const val NOTE_TAG_TOGGLE = "note_tag_toggle"
    const val TOGGLE_PIN_BUTTON = "toggle_pin_button"
    const val TOGGLE_REMINDER_BUTTON = "toggle_reminder_button"
    const val REMINDER_BOTTOM_SHEET = "reminder_bottom_sheet"
    const val DATE_DIALOG = "date_dialog"
    const val TIME_DIALOG = "time_dialog"
    const val REMINDER_ROW = "reminder_row"
    const val TAG_BOTTOM_SHEET = "tag_bottom_sheet"
    const val TOGGLE_CHECKLIST_BUTTON = "toggle_checklist_button"
    const val CHECK_LIST = "check_list"
    const val TAG_LIST = "tag_list"
    const val TOGGLE_COLOR_BUTTON = "toggle_color_button"
    const val ADD_TAG_BUTTON = "add_tag_button"
    const val ADD_NEW_CHECKLIST_ITEM_BUTTON = "add_new_checklist_item_button"
    const val NEW_CHECKLIST_ITEM_TEXT_FIELD = "new_checklist_item_text_field"
    const val REMINDER_DATE = "reminder_date"
    const val REMINDER_TIME = "reminder_time"
    const val REMINDER_TIME_ENTRY = "reminder_time_entry"
    const val SECURE_BUTTON = "secure_button"
    const val PASSWORD_SHEET = "password_sheet"
}
...
